[metadata]
name = gentoo-update
version = 0.1.2
description = Gentoo Linux updater
long_description = file: README.md
long_description_content_type = text/markdown
author = Lab-Brat
author_email = labbrat_social@pm.me
url = https://github.com/Lab-Brat/gentoo_update
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux

[options]
python_requires = >=3.9
include_package_data = True
scripts = gentoo_update/updater.sh

[options.entry_points]
console_scripts =
    gentoo-update = gentoo_update.gentoo_update:main
