[metadata]
name = gentoo-update
description = Gentoo Linux updater
long_description = file: README.md
long_description_content_type = text/markdown
author = Lab-Brat
author_email = labbrat_social@pm.me
url = https://github.com/Lab-Brat/gentoo_update
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux

[options]
python_requires = >=3.10
packages = gentoo_update
include_package_data = True

[options.entry_points]
console_scripts =
    gentoo-update = gentoo_update.gentoo_update:main
